# CLI-FRONTEND-RUST

./: .cli-frontend.conf  .cli-frontend.conf.example  .gitignore  ARCHITECTURES_GUIDE.md  ARCH_LINUX_GUIDE.md  Cargo.toml  GITHUB_ACTIONS_SETUP.md  INSTALLATION.md  PKGBUILD  README.md  REFACTOR_SUMMARY.md  TEMPLATE_GUIDE.md  WINDOWS_INSTALL_FIXES.md  WIZARD_GUIDE.md  example.cli-frontend.conf  install-arch.sh  install-fixed.sh  install-linux.sh  install-macos.sh  install-quick.ps1  install-quick.sh  install.ps1  install.sh  rustfmt.toml  temp_debug.rs
.github/scripts/: common.sh  generate-installers.sh
.github/workflows/: build-and-release.yml  ci.yml
architectures/: atomic-design.json  clean-architecture.json  component-based.json  default.json  event-driven.json  flux.json  micro-frontends.json  mvc.json  mvp.json  mvvm.json  redux.json  screaming-architecture.json
benches/: template_benchmarks.rs
docs/: ARCHITECTURE.md  ARCHITECTURES_GUIDE.md  ARCH_LINUX_GUIDE.md  GITHUB_ACTIONS_SETUP.md  TEMPLATE_GUIDE.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  template_engine.rs  tests.rs  types.rs  wizard.rs
src/config/: architecture.rs  loader.rs  mod.rs  parser.rs
src/file_system/: mod.rs
src/naming/: mod.rs
src/template_engine/: config.rs  data_builder.rs  engine.rs  generator.rs  handlebars_renderer.rs  helpers.rs  inspector.rs  mod.rs  naming.rs  renderer.rs  renderer_trait.rs
src/template_engine/helpers/: case_helpers.rs  (+3 more)
src/types/: mod.rs
templates/api/: $FILE_NAME.api.ts
templates/api-service/: $FILE_NAME.service.test.ts  $FILE_NAME.service.ts  .conf  README.md
templates/component/: $FILE_NAME.stories.tsx  $FILE_NAME.styled.ts  $FILE_NAME.tsx  .conf  index.ts
templates/error-boundary/: $FILE_NAME.boundary.spec.tsx  $FILE_NAME.boundary.tsx  .conf  README.md
templates/hoc/: $FILE_NAME.hoc.spec.tsx  $FILE_NAME.hoc.tsx  .conf  README.md
templates/hook/: .conf  use$FILE_NAME.ts
templates/store/: $FILE_NAME.store.test.ts  $FILE_NAME.store.ts  $FILE_NAME.thunks.ts  $FILE_NAME.types.ts
templates/types/: types.ts
tests/: cli_test.rs
